force-app/main/default/objects/Partner_Referral__c/Partner_Referral__c.object-meta.xml
<CustomObject>
    <description>Junction object for clients referred to Referral Partner contacts</description>
    <label>Partner Referral</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Partner Referrals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>