force-app/main/default/objects/Partner_Referral__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred to These Partners</relationshipLabel>
    <relationshipName>Referred_To</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>