force-app/main/default/objects/Partner_Referral__c/fields/Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Referral Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>