force-app/main/default/objects/Partner_Referral__c/fields/Referral_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_Account__c</fullName>
    <formula>Referral_Partner_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Partner Account</label>
    <type>Text</type>
</CustomField>