force-app/main/default/objects/Partner_Referral__c/fields/Referral_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Referral Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals Given to this Partner</relationshipLabel>
    <relationshipName>Partner_Referrals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>